--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,46 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
-            android:allowBackup="true"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:fullBackupContent="@xml/backup_rules"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.MyFinanceApp"
-            tools:targetApi="31">
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.MyFinanceApp"
+        tools:targetApi="31">
         <activity
-                android:name=".ViewBalanceActivity"
-                android:exported="false"/>
+            android:name=".Settings"
+            android:exported="false" />
         <activity
-                android:name=".TransactionHistoryActivity"
-                android:exported="false"/>
+            android:name=".ViewBalanceActivity"
+            android:exported="false" />
         <activity
-                android:name=".WithdrawActivity"
-                android:exported="false"/>
+            android:name=".TransactionHistoryActivity"
+            android:exported="false" />
         <activity
-                android:name=".TransferActivity"
-                android:exported="false"/>
+            android:name=".WithdrawActivity"
+            android:exported="false" />
         <activity
-                android:name=".DepositActivity"
-                android:exported="false"/>
+            android:name=".TransferActivity"
+            android:exported="false" />
         <activity
-                android:name=".RegisterActivity"
-                android:exported="false"/>
+            android:name=".DepositActivity"
+            android:exported="false" />
         <activity
-                android:name=".LoginActivity"
-                android:exported="true">
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-                  android:exported="false"/>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
